<resources>
    <string name="app_name">Alligo</string>
    <string name="title_home">Home</string>
    <string name="title_setting">Setting</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="title_my_cart">My Cart</string>
    <string name="original_price">Original Price</string>
    <string name="discount_amount">Discount Amount</string>
    <string name="total">Total</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="your_cart_is_empty">Your cart is Empty</string>
    <string name="checkout_success">Your order has been placed successfully</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="checkout">Checkout</string>
    <string name="logout">Logout</string>
    <string name="item_is_deleted">Item is deleted</string>
    <string name="undo">Undo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="forget_password">Forget Password?</string>
    <string name="sign_up">Sign up</string>
    <string name="no_account">Don\'t have account?</string>
    <string name="user_name">User Name</string>
    <string name="invalid_data">Invalid username or password. Please try again</string>
    <string name="logged_in_successfully">Logged in Successfully</string>
    <string name="failed_to_get_data">Failed to get data</string>
    <string name="check_your_connection_then_retry">Check your connection, then retry</string>
    <string name="search">Search</string>
    <string name="hello">Hello in Alligo</string>
    <string name="sign_in_to_get_anything_anytime_anywhere">Sign in to get Anything, Anytime, Anywhere</string>
    <string name="reviews">Reviews</string>
    <string name="description">Description</string>
    <string name="field_is_required">Field is required</string>
    <string name="password_must_be_at_least_8_characters">Password must be at least 8 characters</string>
    <string name="item_is_added_successfully">Item is added to cart successfully</string>


</resources>