<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".presentation.login.LoginFragment">

    <TextView
        android:id="@+id/login_title1"
        style="@style/TextH1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="40dp"
        android:text="@string/hello"
        android:textColor="@color/textSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_title2"
        style="@style/TextH5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="16dp"
        android:text="@string/sign_in_to_get_anything_anytime_anywhere"
        android:textColor="@color/textSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_title1" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/top_round_corners_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/login_card"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="32dp">

                <!--   username     -->
                <TextView
                    android:id="@+id/login_text_username"
                    style="@style/TextH5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/user_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/longin_edit_text_username_layout"
                    style="@style/EditTextLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/login_text_username"
                    app:startIconDrawable="@drawable/ic_user"
                    app:startIconTint="@color/edit_text_content"
                    tools:ignore="Autofill,DuplicateSpeakableTextCheck">

                    <EditText
                        android:id="@+id/longin_edit_text_username"
                        style="@style/EditText"
                        android:layout_width="match_parent"
                        android:layout_height="53dp"
                        android:hint="@string/user_name"
                        android:inputType="text"
                        app:hintEnabled="false" />

                </com.google.android.material.textfield.TextInputLayout>

                <!--     Password       -->
                <TextView
                    android:id="@+id/login_text_view_password"
                    style="@style/TextH5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/password"
                    app:layout_constraintStart_toStartOf="@id/login_text_username"
                    app:layout_constraintTop_toBottomOf="@+id/longin_edit_text_username_layout" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/login_edit_text_password_layout"
                    style="@style/EditTextLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    app:endIconMode="password_toggle"

                    app:endIconTint="@color/edit_text_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/login_text_view_password"
                    app:startIconDrawable="@drawable/ic_lock"

                    app:startIconTint="@color/edit_text_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login_edit_text_password"
                        style="@style/EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        tools:ignore="Autofill" />
                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:id="@+id/login_text_view_forget_password"
                    style="@style/TextBodySmallMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/forget_password"
                    android:textColor="@color/textPrimaryAlt"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/login_edit_text_password_layout" />


                <ProgressBar
                    android:id="@+id/login_btn_progress"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:elevation="4dp"
                    android:indeterminateTint="@color/colorOnPrimary"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@id/login_btn"
                    app:layout_constraintEnd_toEndOf="@id/login_btn"
                    app:layout_constraintStart_toStartOf="@id/login_btn"
                    app:layout_constraintTop_toTopOf="@id/login_btn" />
                <!--    Button        -->
                <Button
                    android:id="@+id/login_btn"
                    style="@style/FilledButton"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="26dp"
                    android:text="@string/sign_in"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/login_text_view_forget_password" />


                <!--     No Account       -->
                <TextView
                    android:id="@+id/login_no_account"
                    style="@style/TextBodyLargeRegular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80dp"
                    android:text="@string/no_account"
                    app:layout_constraintBottom_toTopOf="@+id/login_text_signup"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/login_btn" />

                <TextView
                    android:id="@+id/login_text_signup"
                    style="@style/TextH5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textColor="@color/textSecondary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>


    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>