<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/product_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <FrameLayout
        android:id="@+id/product_error_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/product_error"
            layout="@layout/error_view" />
    </FrameLayout>

    <ScrollView
        android:id="@+id/product_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="130dp"

        android:fillViewport="true"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <!-- ViewPager2 for Image Slider -->
            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/product_viewPager"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:clipToPadding="false"
                android:paddingHorizontal="16dp" />

            <!-- TabLayout for Dots Indicator -->
            <com.google.android.material.tabs.TabLayout
                android:id="@+id/product_tabLayout"
                android:layout_width="wrap_content"
                android:layout_height="3dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:background="@color/grey200"
                app:tabGravity="center"
                app:tabIndicatorColor="@color/colorSecondaryVariant"
                app:tabIndicatorHeight="3dp"
                app:tabMode="fixed" />


            <!--            <FrameLayout-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="250dp">-->

            <!--                <include-->
            <!--                    android:id="@+id/product_thumbnail"-->
            <!--                    layout="@layout/custom_image_view" />-->
            <!--            </FrameLayout>-->


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="16dp"
                android:orientation="vertical">


                <!-- Product Title -->
                <TextView
                    android:id="@+id/product_title"
                    style="@style/TextH2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/textSecondary"
                    tools:text="Sample Product Title" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <!-- Product Brand -->
                    <TextView
                        android:id="@+id/product_brand"
                        style="@style/TextH5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="24dp"
                        android:text="Brand"
                        android:textColor="@color/colorPrimaryVariant" />

                    <!--         Tags        -->
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/product_tage_recyclerview"
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        app:layout_constraintBottom_toTopOf="@id/cart_bottom_sheet"
                        app:layout_constraintTop_toBottomOf="@id/cart_appbar" />

                </LinearLayout>

                <!-- Product Category -->
                <TextView
                    android:id="@+id/product_category"
                    style="@style/TextBodyMediumMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="category"
                    android:textColor="@color/colorSecondaryVariant" />
                <!-- Price and Discount -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/product_price"
                        style="@style/TextH5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textSecondary"
                        tools:text="$99.99" />

                    <TextView
                        android:id="@+id/product_original_price"
                        style="@style/TextBodyMediumMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:textColor="@color/textPrimaryAlt"
                        tools:text="$99.99" />


                    <!--  Discount   -->
                    <androidx.cardview.widget.CardView
                        android:id="@+id/product_discount_card"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="24dp"
                        android:layout_marginVertical="8dp"
                        app:cardBackgroundColor="@color/red"
                        app:cardCornerRadius="24dp"
                        app:layout_constraintStart_toStartOf="@id/product_item_image_card"
                        app:layout_constraintTop_toTopOf="@id/product_item_image_card">

                        <TextView
                            android:id="@+id/product_discount_text"
                            style="@style/TextBodySmallRegular"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="8dp"
                            android:layout_marginVertical="1dp"
                            android:text="30%"
                            android:textColor="@color/white" />

                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <!-- Rating & Stock Status -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/product_item_rating_text"
                        style="@style/TextBodyMediumRegular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_star"
                        android:drawablePadding="8dp"
                        android:text="3.5"
                        android:textColor="@color/textPrimary" />

                    <TextView
                        android:id="@+id/product_stock"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:textColor="@color/green"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        tools:text="In Stock" />
                </LinearLayout>

                <!-- Product Description -->
                <TextView
                    style="@style/TextH5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/description"
                    android:textColor="@color/textSecondary" />

                <TextView
                    android:id="@+id/product_description"
                    style="@style/TextBodyMediumRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/textPrimary"

                    tools:text="This is a sample product description." />


                <TextView
                    android:id="@+id/product_shipping_info"
                    style="@style/TextBodyMediumMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/textPrimary"
                    tools:text="Ships within 2-3 days" />

                <!-- Warranty Information -->
                <TextView
                    android:id="@+id/product_warranty"
                    style="@style/TextBodyMediumMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:textColor="@color/textPrimary"
                    tools:text="1-year manufacturer warranty" />

                <TextView
                    android:id="@+id/product_policy"
                    style="@style/TextBodyMediumMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:textColor="@color/textPrimary"
                    tools:text="return policy" />

                <TextView
                    android:id="@+id/product_review_title"
                    style="@style/TextH5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/reviews"
                    android:textColor="@color/textSecondary" />

            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/product_review_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal" />
        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/product_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_round_corners_background"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="24dp">


            <Button
                android:id="@+id/product_add_to_cart_btn"
                style="@style/FilledButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:text="@string/add_to_cart"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
